# pit

./: pyproject.toml  setup.cfg
src/: main.py
